# bitrix24

./: .gitignore  README.rst  makefile  manage.py  pyproject.toml
bitrix24/: asgi.py  settings.py  urls.py  wsgi.py
create_lead/: apps.py  forms.py  models.py  urls.py  views.py
create_lead/templates/create_lead/: hello_user.html  index.html  lead_have_created.html
templates/: base.html
