[tool.poetry]
name = "bitrix24"
version = "0.1.0"
description = ""
authors = ["Sergey_Sharay <sergeysharay1987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
dadata = "^20.7.0"
fast-bitrix24 = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
